# LAEs

./: .gitattributes  .gitignore  DT_L_lya.ipynb  EW_L_lya_relation.ipynb  GB_L_lya.ipynb  LAE_cont_tests_1.ipynb  LAE_cont_tests_2.ipynb  LF_puricomp_corrections.py  LF_v2.ipynb  L_diagnosis.ipynb  L_min_plot.py  LumFunc_miniJPAS.py  ML_class.ipynb  NN_L_lya.ipynb  NN_lya.ipynb  PLOT_some_spectrum.py  Photometry_w-errors.ipynb  README.md  RF_L_lya.ipynb  RF_L_lya_2.ipynb  RF_L_lya_no_dask.ipynb  Stacked_nb_cont-BOTH.ipynb  Stacked_nb_cont-LAE.ipynb  Stacked_nb_cont-OII.ipynb  T_correct_test1.ipynb  Training_set_prep.ipynb  Training_set_prep_2.ipynb  add_errors.py  colorplot.py  colorplot_1000.ipynb  colorplot_minijpas.ipynb  completeness.ipynb  completeness_both_2D.ipynb  completeness_gal_2D.ipynb  completeness_matrix_qso.ipynb  completeness_qso.ipynb  completeness_qso_2D.ipynb  completeness_qso_3fm.ipynb  completeness_qso_fixew0.ipynb  completeness_sfg_2D.ipynb  (+88 more)
MyMocks/: Make_GAL.py  Make_GAL_DR16.py  Make_LAE.py  Make_LAE_v2.py  Make_LC_GAL.ipynb  Make_OII.py  Make_QSO.py  Make_QSO_altered.py  Make_QSO_altered_2.py  Make_catalog.py  make_multiple_qso_altered.sh  make_multiple_qso_altered_2.sh  my_utilities.py  plot_some_LAEs.py  plot_spectra.py
csv/: 5sigma_depths_BB.csv  5sigma_depths_NB.csv  CIII_fts.csv  CIV_fts.csv  HETDEX_LumFunc.csv  (+25 more)
package/: README.md  pyproject.toml
package/src/miniLAEs/: L_min_plot.py  LumFunc_miniJPAS.py  colorplot.py  contaminants_hist.py  download_images.py  minijpas_LF_and_puricomp.py  my_functions.py  pyproject.toml  three_filter.py
(+398 files in other folders)
