[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniLAEs"
version = "0.0.2"
authors = [
  { name="Alberto Torralba", email="alberto.torralba@uv.es" },
]
description = "Utilities to work with J-PAS LAEs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/totoal/LAEs"
